# elox

./: .gitignore  CMakeLists.txt  README.md  array.slox  class.slox  exceptions.slox  fib.slox  iterator.slox  lambda.slox  loops.slox  p2.elox  p3.slox  p4.slox  p5.elox  p6.elox  p8.slox  test.slox  test1.slox
.github/workflows/: codeql-analysis.yml
elox/: elox.c  elox_test_embed.c
elox/include/: elox-config.h.in  elox-defines.h  elox.h
elox/include/elox/: Class.h  CloseTable.h  PropTable.h  StringIntTable.h  StringTable.h  ValueArray.h  ValueTable.h  builtins.h  chunk.h  common.h  compiler.h  debug.h  elox-config-internal.h  elox-internal.h  function.h  handleSet.h  memory.h  objTags.h  objTagsDispatchEnd.h  objTagsDispatchStart.h  object.h  opcodes.h  propTypeDispatchStart.h  propTypes.h  rand.h  scanner.h  state.h  table.h  util.h  value.h  valueArray.h  vm.h
elox/include/elox/builtins/: array.h  ctypeCleanup.h  ctypeInit.h  string.h
elox/lib/: Class.c  CloseTable.c  PropTable.c  StringIntTable.c  StringTable.c  ValueArray.c  ValueTable.c  builtins.c  chunk.c  common.c  compiler.c  debug.c  elox.c  fmt.c  function.c  handleSet.c  loader.c  memory.c  object.c  primegen.c  scanner.c  snprintf.c  state.c  table.c  util.c  value.c  valueTable.c  vm.c
elox/lib/array/: array.c
elox/lib/ops/: addOps.h  inOps.h  opsCleanup.h  opsInit.h
elox/lib/string/: fmt.c  pattern.c  string.c
slox/: slox.c
slox/include/slox/: builtins.h  chunk.h  common.h  compiler.h  debug.h  memory.h  object.h  opcodes.h  rand.h  scanner.h  state.h  table.h  value.h  valueTable.h  vm.h
slox/lib/: builtins.c  chunk.c  compiler.c  debug.c  memory.c  object.c  scanner.c  state.c  table.c  value.c  valueTable.c  vm.c
tests/: .gitignore  CMakeLists.txt  a.elox  array.elox  array.slox  assert.elox  assert.slox  b.elox  class.elox  class1.elox  class2.elox  class3.elox  default.elox  elox-functional-tests.h.in  eloxTests.c  embedded.elox  exc1.elox  exception1.elox  exceptions.elox  exceptions.slox  expand.elox  fibers.elox  fmt.elox  fstring.elox  function.elox  in.elox  interface.elox  interface1.elox  invoke.elox  iterator.elox  iterator1.elox  lambda.elox  lambda.slox  loops.elox  map.elox  map.slox  map1.elox  map1.slox  method.elox  mod.elox  (+17 more)
tests/bench/: callgrind.out.52004  fib.elox  fib.lua  fib.slox  zoo_batch.elox  zoo_batch.lua  zoo_batch.slox  zoo_batch_fixed.elox  zoo_batch_fixed.slox
tests/functional/: test_basic.elox  test_string.elox
